--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       <!-- 계좌번호 -->
       <section id="accountNumberSection">
         <div class="animate-on-scroll">
-          <h5 id="accountNumberTitleInfo"><b>마음 전하실 곳</b></h5>
+          <h5 id="accountNumberTitleInfo"><b>마음 전하실 곳</h5>
           <button class="accordion relative">
             <p id="centerText">신랑 측 계좌번호</p>
             <div class="arrow"></div>
